[tool.poetry]
name = "yaml-indent"
version = "0.1.1"
description = ""
authors = ["Knut Olav Bøhmer <bohmer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.17.31"
configparser = "^5.3.0"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaml-indent = "yaml_indent.yaml_indent:main"

