[tool.poetry]
name = "yaml-indent"
version = "0.1.4"
description = "Tool for making consistent indentation"
authors = ["Knut Olav Bøhmer <bohmer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruamel-yaml = "^0.17.31"
configparser = "^5.3.0"
argparse = "^1.4.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaml-indent = "yaml_indent.yaml_indent:main"

[tool.poetry.urls]
"Repository" = "https://github.com/knobo/yaml-indent"
"Bug Tracker" = "https://github.com/knobo/yaml-indent/issues"
"Documentation" = "https://github.com/knobo/yaml-indent/wiki"  